Prevent quotes in odd sections from being cut off at certain widths
The negative margins on blockquotes position them outside of the
section's max width. This introduces additional right padding to
sections at widths where the blockquote text could otherwise be
potentially cut off.

--- a/css/style.css
+++ b/css/style.css
@@ -941,6 +941,12 @@ table.tablepress thead tr th,
 	font-weight: 400;
 }
 
+@media screen and (max-width: 1252px) {
+	.spine-full .the-evidence .two {
+		padding-right: 8rem;
+	}
+}
+
 @media screen and (min-width: 1189px) {
 	.spine-full .fluid .the-evidence .side-left .one {
 		/* Half of the section width minus 17 percent of the max width (since the other column is 67% wide) */
